--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -5,6 +5,7 @@ version 2.x.x
 
 Defect Fixes:
 Fix for: filter terminal flags up when recipe truncated
+SF bug 107: invalid XML output when a zip file is missing
 
 
 version 2.11.2
