--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Release Notes for Symbian Build System v2
 
 Next version
 
+SF bug 1570: Adding then removing a capability can produce incorrect result: e.g. ALL TCB -TCB becomes ALL -TCB but it should be just ALL
 - Combine Linking and Postlinking into a single step
 - New 'Patchable Constants' target type: TARGETTYPE pdll
 - Support exit codes from next version of the trace compiler which will issue them
