--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,8 +1,7 @@
 
 Release Notes for Symbian Build System v2
 
-Next version
-
+version 2.12.0
 
 New Features:
 - New 'Patchable Constants' target type: TARGETTYPE pdll
@@ -56,8 +55,6 @@ Defect Fixes:
 Other Changes:
 - Default to using Python 2.6.4 on windows (no change in compatibility with 
   older versions of Python).
-
-
 
 
 version 2.11.3
