--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,6 +1,14 @@
 
 Release Notes for Symbian Build System v2
 
+next version
+
+- New build win32 tools on Linux.  
+  To enable it, use variant '.win32'. To build both windows and linux binaries,
+  use:
+	-c tools2.win32 -c tools2
+  It only applies to platform tools2 on Linux
+
 version 2.12.0
 
 New Features:
