--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@ Next version
 Defect fixes:
 - SF Bug 1494 - sbs --what does not report Trace Compiler output
 - sbs -c winscw.tracecompiler uses wrong UID and doesn't generate traces
+- SF Bug 1569 - excessive recompilation in incremental tracecompiler builds
 
 version 2.12.0
 
