fix: better error messages when an incorrect make engine is specified.  Requires that all make engine variants should extend "make_engine".
--HG--
branch : fix

--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,6 +1,10 @@
 
 Release Notes for Symbian Build System v2
 
+Next Version
+Defect Fixes:
+- Better error messages for make-engine selection.  e.g. "sbs -e arm" will now produce a useful error message rather than a traceback. "arm" is a real variant but it's not a make engine.  In the past sbs would have tried to use it and would have failed with a complicated traceback. Also doesn't traceback for non-existent make engines.
+
 version 2.12.1
 
 Defect Fixes:
