--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,5 +1,7 @@
 Release Notes for Symbian Build System v2
 
+- SF Bug 1861 - [Raptor] More helpful console message in case of Error 128 (timeout)
+
 next version
 
 Defect Fixes:
