--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,10 +1,10 @@
 Release Notes for Symbian Build System v2
 
-- SF Bug 1861 - [Raptor] More helpful console message in case of Error 128 (timeout)
 
 next version
 
 Defect Fixes:
+- SF Bug 1861 - [Raptor] More helpful console message in case of timeouts
 - DPDEF142718 Incremental rebuild fails if dependent files deleted
   --no-depend-generate added to suppress the generation and processing of dependency files
   .DEFAULT target introduced for all non --no-depend-generate and/or --no-depend-include builds
