--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Release Notes for Symbian Build System v2
 
 next version
 - SF Bug 2125 - [Raptor] - tracecompiler what output incorrect if mmp basename contains '.' e.g. fred.prd.mmp 
+- Fix: extend tracecompiler tests to Linux
 
 version 2.12.4
 
