--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Release Notes for Symbian Build System v2
 next version
 
 Defect Fixes:
+- SF Bug 1939 - [Raptor] PAGED keyword in MMP files should imply byte pair compressed
 - DPDEF144648 - Raptor failed to build tools_deb objects under Windows XP 
 - Fix: Workaround for emake engine log corruption when clockskew errors occur (annofile2log). 
   Allow Raptor to obtain log from emake annotation file where it is uncorrupted.  A new 
