--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -1,5 +1,10 @@
 Release Notes for Symbian Build System v2
 
+next version
+Defect Fixes:
+- SF Bug 2308 - [Raptor]: PLUGIN3 TARGETTYPEs don't set resource output offsets correctly
+
+
 version 2.12.5
 
 Defect Fixes:
@@ -13,7 +18,6 @@ Defect Fixes:
 - Fix: extend tracecompiler tests to Linux
 - Fix: Amendment to SF Bug 1511 fix - removal of blanked DEFFILE keyword from e32abiv2ani.flm
 - Fix: improve robustness to bad -c options
-
 
 
 version 2.12.4
