--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -14,6 +14,7 @@ Defect Fixes:
 - Fix: remove unnecessary empty lines in log output in copylogfromannofile mode. 
 - SF Bug 1939 - [Raptor] PAGED keyword in MMP files should imply byte pair compressed
 - DPDEF144648 - Raptor failed to build tools_deb objects under Windows XP 
+- SF Bug 2134 - [Raptor] Raptor does not pass overridden make variables into its makefiles
 
 
 version 2.12.5
