--- a/sbsv2/raptor/RELEASE-NOTES.txt
+++ b/sbsv2/raptor/RELEASE-NOTES.txt
@@ -15,6 +15,7 @@ Defect Fixes:
 - SF Bug 1939 - [Raptor] PAGED keyword in MMP files should imply byte pair compressed
 - DPDEF144648 - Raptor failed to build tools_deb objects under Windows XP 
 - SF Bug 2134 - [Raptor] Raptor does not pass overridden make variables into its makefiles
+- Fix : do not allow data to be paged implicitly
 
 
 version 2.12.5
